# lyricsync

./: .gitignore  README.md  pyproject.toml
lyricsync/: __init__.py  cli.py  config.py  display.py  extras.py  lyrics.py
lyricsync/sources/: __init__.py  base.py  detect.py  mpris.py  webapi.py
